hphp/test/zend/bad/ext/sockets/tests/mcast_ipv4_send_error.php.skipif
<?php
if (!extension_loaded('sockets')) {
    die('skip sockets extension not available.');
}
if (socket_set_option($s, $level, IP_MULTICAST_IF, 1) === false) {
	die("skip interface 1 either doesn't exist or has no ipv4 address");
}